<resources>
    <string name="app_name">Atlantic City</string>
    <string name="facebook_app_id">241933420255231</string>
    <string name="fb_login_protocol_scheme">fb241933420255231</string>
    <string name="server_client_id">383335519112-gd3gp6f7bjcb4au62b4v3pog8uaivuac.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="google_maps_key">AIzaSyCc_N1Z1xiwO_CCoGRQ1V1C5BStD6YfFoo</string>
    <string name="splash_header_text">SAVE MONEY\nEARN POINTS\nSPIN &amp; WIN</string>
    <string name="webiste">www.AtlanticCity.com</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="save_money">SAVE MONEY</string>
    <string name="find_deals">Find deals in Atlantic City right now.</string>
    <string name="get_points">YOU GET POINTS\nMANY WAYS...</string>
    <string name="saving_money">Saving money at a business\nsharing (business or app)\nentering your birthday\nentering your zipcode</string>
    <string name="spin_win">SPIN &amp; WIN</string>
    <string name="after_getting_points">When you have gotten enough points,\nyou will spin the lucky wheel &amp; get a\nfree gift from AtlanticCity.com</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="guru_card">100$ Dining Guru Card\nwhen 10 friends install The Atlantic\nCity App, You get this.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create Account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email_will_be_used">Email will be used for login</string>
    <string name="phone_number">Phone number</string>
    <string name="we_will_send_text">We will send text message for registration</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_tapping_signup">By tapping sign up, you confirm that you accept our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">  and  </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_up">Sign up</string>
    <string name="or_login_using">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="one_time_password">One Time Password</string>
    <string name="verification_code_sent">A verification code has been sent to</string>
    <string name="enter_it_here">Enter it here to activate your account</string>
    <string name="activate_account">Activate account</string>
    <string name="sample_mail_id" translatable="false">name@examplecom</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Please enter your email id.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="first_name_validation">Please enter your first name.</string>
    <string name="last_name_validation">Please enter your last name.</string>
    <string name="not_valid_email"> Not a valid email id.</string>
    <string name="password_validation">Your password must be at least 6 characters long.</string>
    <string name="password_confirmation_validation">Your confirmation password must be at least 6 characters long.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_net">Something went wrong, please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops ! connect your internet.</string>
    <string name="email_exist">This email has already been taken.</string>
    <string name="please_enter_feedback">Please enter your feedback.</string>
    <string name="phone_validation">Please enter your phone number.</string>
    <string name="warning_password_not_matched">Your passwords doesn\'t match.</string>
    <string name="please_enter_zip_code">Please enter zip code.</string>
    <string name="please_select_birthday">Please select your birthday.</string>
    <string name="not_enough_points">You don\'t have enough points to spin wheel.</string>
    <string name="earn_points_now">Earn Points Now</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_earned">You have earned 30\npoints for </string>
    <string name="get_more_points_now">Get more points now</string>
    <string name="save">Save</string>
    <string name="enter_your_zip_code">ENTER YOUR ZIP CODE</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_birthday">ENTER YOUR BIRTHDAY</string>
    <string name="select_date">Select date</string>
    <string name="birthday">Birthday</string>
    <string name="deals">Deals</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="sign_out">Sign Out</string>
    <string name="earned_points">Earned Points</string>
    <string name="how_to_earn">How to Earn Points?</string>
    <string name="favourites">Favorites</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="explore">Explore</string>
    <string name="show_employess">Show to employee before\nthe countdown ends</string>
    <string name="get_this_deal">Get this Deal</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="start_the_countdown">Start the Countdown</string>
    <string name="click_to_get_qr">Click here to get your QR</string>
    <string name="shop_and_earn">Shop and Earn</string>
    <string name="find_deals_and_you_get">Save money and get points.</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_your_dob_and_get">Get a birthday deal and bonus points.</string>
    <string name="points">points.</string>
    <string name="enter_zip">Enter Zip Code</string>
    <string name="enter_zip_and_you_get">Get points and special deals for you.</string>
    <string name="share_the_app">Share the App</string>
    <string name="share_app">Share the App and you will get</string>
    <string name="points_capital">POINTS</string>
    <string name="zip_code">Zip code</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="earn_more_points">Earn More Points</string>
    <string name="available_points">Available Points</string>
    <string name="zip_code_points">Zipcode Points</string>
    <string name="birthday_points">Birthday Points</string>
    <string name="registration_points">Registration Points</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_to_get_points">Scan Now To Get Points</string>
    <string name="ask_from_qr">Ask An Employee For The QR Code</string>
    <string name="share_and_get_points">Share with friends and get a huge gift.</string>
    <string name="swipe">SWIPE</string>
    <string name="swipe_the_wheel">Swipe the wheel</string>
    <string name="view_deal">View Deal</string>
    <string name="deal_detail">Deal Detail</string>
    <string name="contacts">Contacts</string>
    <string name="invite_friends_">Invite friends</string>
    <string name="reffer_friends">REFER FRIENDS, EARN UPTO 100$</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="send_your_referral">Send your referral link to your friends</string>
    <string name="your_friends_download">Your friends download our app using\nyour referral link and sync.</string>
    <string name="dining_guru_card">$100 Dining Guru Card. When 10 friends install the\nAtlantic City App, You Get This!</string>
    <string name="send_your_unique">send your unique referral link:</string>
    <string name="customize_link">Customize Link</string>
    <string name="by_participating">By participating you agree to the </string>
    <string name="terms_and_condition">  Terms and Conditions</string>
    <string name="sync_contacts">Sync contacts</string>
    <string name="spin_and_win">Spin and Win </string>
    <string name="help_feedback_text">Atlantic City Help and Feedback lets you send\nsuggestions about products.We welcome\nproblems, features ideas and general comment.</string>
    <string name="give_feed_back">Give your feedback</string>
    <string name="send">Send</string>
    <string name="about_us_text"> AtlanticCity.com part of a network of websites owned by the popular Florida.com travel network. We have been in business providing solutions since 1995, the early days of Internet inception.
   </string>
    <string name="search_result">Search Result</string>
    <string name="no_record_found">There is no record found.</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="enter_email_to_reset_password">Enter your email address to\nreset your password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_code">Reset Password Code</string>
    <string name="enter_new_passowrd">Enter New Password</string>
    <string name="change_password">Change password</string>
    <string name="please_enter_code">Please enter reset password code!</string>
    <string name="please_enter_new_password">Please enter new Password!</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="please_enter_current_password">Please enter current Password!</string>
    <string name="claim_deal">Claim Deal</string>
    <string name="get_prize">Get Prize</string>
    <string name="your_invites">Get Prize</string>
    <string name="file_name_body">%s_%s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="we_will_ever">We will never share your private\ninformation without your permission</string>
    <string name="allow_access">Allow Access</string>
    <string name="you_are_welcome">You\'re welcome</string>
    <string name="spin_win_">Spin and Win</string>
    <string name="view_details">View Details</string>
    <string name="date_of_birth_exists">Date of birth already exists.</string>
    <string name="zip_code_exists">Zipcode already exists.</string>
    <string name="no_deals_available_right_now">No deals available right now.</string>
    <string name="check_connection">Please check your internet connection.</string>
    <string name="view_invites">View Invites</string>
    <string name="resend_otp">Resend OTP</string>
</resources>