<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context=".Activities.WelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dots">

    </androidx.viewpager.widget.ViewPager>



    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/dots"
        android:layout_above="@+id/buttonLayout"
        android:layout_height="wrap_content">


        <com.atlanticcity.app.CustomFont.CustomTextView
            android:layout_width="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginLeft="35dp"
           android:layout_centerVertical="true"
            android:id="@+id/back"
            android:layout_height="wrap_content">

        </com.atlanticcity.app.CustomFont.CustomTextView>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:id="@+id/layoutDots"
            android:orientation="horizontal">


        </LinearLayout>

        <com.atlanticcity.app.CustomFont.CustomTextView
            android:layout_width="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/next"
            android:layout_marginRight="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">

        </com.atlanticcity.app.CustomFont.CustomTextView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.atlanticcity.app.CustomFont.CustomButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="1dp"
            android:textSize="20sp"
            android:background="@drawable/white_button_bg"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <com.atlanticcity.app.CustomFont.CustomButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/green_button_bg"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>